--- a/index.html
+++ b/index.html
@@ -114,13 +114,6 @@
                         <div class="col-md-6">
                             <ul class="list-group list-group-flush fs-5">
                                 <li class="list-group-item">
-                                    Niver: <span class="fw-lighter">11 de Maio de
-                                        1986</span>
-                                </li>
-                                <li class="list-group-item">
-                                    Idade: <span class="fw-lighter">37 anos</span>
-                                </li>
-                                <li class="list-group-item">
                                     Cidade: <span class="fw-lighter">Penápolis</span>
                                 </li>
                                 <li class="list-group-item">
@@ -132,9 +125,9 @@
                         <div class="col-md-6">
                             <ul class="list-group list-group-flush fs-5">
                                 <li class="list-group-item">Hobby: <span class="fw-lighter">Jogos Digitais</span></li>
-                                <li class="list-group-item">Site: <a href="https://th_nextlevel.com.br.app/" target="_blank"
-                                        class="fw-lighter text-decoration-none link-dark">links.th-Next Leval</a></li>
-                                <li class="list-group-item">Trabalho: <a href="https://blueedtech.com.br/"
+                                <li class="list-group-item">Site: <a href="https://nextlevel-1.my.canva.site/.com.br.app/" target="_blank"
+                                        class="fw-lighter text-decoration-none link-dark">links.th-Next Level</a></li>
+                                <li class="list-group-item">Trabalho: <a href=https://www.kelan.com.br/"
                                         target="_blank" class="fw-lighter text-decoration-none link-dark">Kelan Móveis</a></li>
                                 <li class="list-group-item">Experiência: <span class="fw-lighter"> +5
                                         anos</span></li>
@@ -143,7 +136,7 @@
                         </div>
                     </div>
 
-                    <p>Além de coordenar e lecionar desenvolvimento fullstack, eu também compartilho conteúdo
+                    <p>Além de coordenar o desenvolvimento fullstack, eu também compartilho conteúdo
                         gratuito no instagram, dando dicas de programação e carreira, e no YouTube, posto videos de
                         pequenos projetos, dicas de carreira, dicas de tecnologias, entre outros assuntos. Tudo isso
                         para tornar a programação cada vez mais acessível para todos!</p>
@@ -167,6 +160,42 @@
                             <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95"
                                 data-anime="left" aria-valuemin="0" aria-valuemax="100">95%</div>
                         </div>
+                        <p class="mt-3 mb-0">Machine Learning</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Redes Neurais</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 90%;"
+                                aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Visão Computacional</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Flask</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 85%;"
+                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+                        <div class="col-md-6">
+                        <p class="mt-3 mb-0">Django</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Dash</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                            <p class="mt-3 mb-0">HTML</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
                         <p class="mt-3 mb-0">CSS</p>
                         <div class="progress">
                             <div class="progress-bar" data-anime="left" role="progressbar" style="width: 55%;"
@@ -177,15 +206,10 @@
                             <div class="progress-bar" data-anime="left" role="progressbar" style="width: 60%;"
                                 aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">60%</div>
                         </div>
-                        <p class="mt-3 mb-0">HTML</p>
-                        <div class="progress">
-                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
-                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
-                        </div>
-                        <p class="mt-3 mb-0">Scrum</p>
-                        <div class="progress">
-                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
-                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">60%</div>
+                            <p class="mt-3 mb-0">MySQL</p>
+                        <div class="progress mb-3">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 75%;"
+                                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
                         </div>
                         <p class="mt-3 mb-0">Git</p>
                         <div class="progress">
@@ -198,45 +222,14 @@
                                 aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <p class="mt-3 mb-0">Django</p>
+                        <p class="mt-3 mb-0">Scrum</p>
                         <div class="progress">
                             <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
-                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">70%</div>
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">60%</div>
                         </div>
-                        <p class="mt-3 mb-0">Dash</p>
-                        <div class="progress">
-                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
-                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">80%</div>
-                        </div>
-                        <p class="mt-3 mb-0">Flask</p>
-                        <div class="progress">
-                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 85%;"
-                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
-                        </div>
-                        <p class="mt-3 mb-0">Visão Computacional</p>
-                        <div class="progress">
-                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
-                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
-                        </div>
-                        <p class="mt-3 mb-0">Aprendizado de máquina</p>
-                        <div class="progress">
-                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
-                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
-                        </div>
-                        <p class="mt-3 mb-0">Redes Neurais</p>
-                        <div class="progress">
-                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 90%;"
-                                aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
-                        </div>
-                        <p class="mt-3 mb-0">MySQL</p>
-                        <div class="progress mb-3">
-                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 75%;"
-                                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
-                        </div>
+                        
                     </div>
                 </div>
-
                 <hr class='w-50 me-auto ms-auto'>
 
                 <div class="row">
@@ -300,14 +293,6 @@
                             <p>Recebi conceitos e técnicas de programação e teoria de sistemas lógica para contribuir na
                                 solução de problemas de tratamento da informação nas organizações por meio da construção
                                 de modelos de automação e Inteligência artificial incorporativa. </p>
-                        </div>
-
-                        <div class='cv-item' data-anime="up">
-                            <h4>Esp. Docência em Ciênc. e Tec. da Info.</h4>
-                            <h5>2019 - 2019</h5>
-                            <p><em>Instituto Brasileiro de Formação</em></p>
-                            <p>Pós-graduação voltada a área de docencia com o foco em tecnologia da informação e
-                                ciências da informação, com carga horária de 480 horas</p>
                         </div>
 
                         <div class='cv-item' data-anime="up">
