--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="col-md-6">
                             <ul class="list-group list-group-flush fs-5">
                                 <li class="list-group-item">Hobby: <span class="fw-lighter">Jogos Digitais</span></li>
-                                <li class="list-group-item">Site: <a href="https://nextlevel-1.my.canva.site/.com.br.app/" target="_blank"
+                                <li class="list-group-item">Site: nextlevel <a href="nextlevel-1.my.canva.site/" target="_blank"
                                         class="fw-lighter text-decoration-none link-dark">links.th-Next Level</a></li>
                                 <li class="list-group-item">Trabalho: <a href=https://www.kelan.com.br/"
                                         target="_blank" class="fw-lighter text-decoration-none link-dark">Kelan Móveis</a></li>
