--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                             <div class="row row-cols-1 row-cols-md-3 g-4">
                                 <div class="col">
                                     <div class="card">
-                                        <img src="../static/img/botoes_interativos.gif" class="card-img-top"
+                                        <img src="img/botoes_interativos.gif" class="card-img-top"
                                             alt="Plataforma educacional">
                                         <div class="card-body">
                                             <h5 class="card-title">Painel Estadual de ativos</h5>
@@ -415,7 +415,7 @@
                                 </div>
                                 <div class="col">
                                     <div class="card">
-                                        <img src="../static/img/painel2.gif" class="card-img-top img-fluid w-100"
+                                        <img src="img/painel2.gif" class="card-img-top img-fluid w-100"
                                             alt="print do blog">
                                         <div class="card-body">
                                             <h5 class="card-title">Doadores em todos dos EUA</h5>
@@ -429,7 +429,7 @@
                                 </div>
                                 <div class="col">
                                     <div class="card">
-                                        <img src="../static/img/projeto_painel3.gif" class="card-img-top img-fluid w-100"
+                                        <img src="img/projeto_painel3.gif" class="card-img-top img-fluid w-100"
                                             alt="print do blog">
                                         <div class="card-body">
                                             <h5 class="card-title">Público-Alvo</h5>
@@ -449,7 +449,7 @@
                             <div class="row row-cols-1 row-cols-md-3 g-4">
                                 <div class="col">
                                     <div class="card h-100">
-                                        <img src="../static/img/projeto_portifolio.png" class="card-img-top img-fluid w-100"
+                                        <img src="img/projeto_portifolio.png" class="card-img-top img-fluid w-100"
                                             alt="print do blog">
                                         <div class="card-body">
                                             <h5 class="card-title">Next Level | Publicidade & Marketing Digital</h5>
@@ -468,7 +468,7 @@
                                 </div>
                                 <div class="col">
                                     <div class="card">
-                                        <img src="../static/img/bot.jpg" class="card-img-top"
+                                        <img src="img/bot.jpg" class="card-img-top"
                                             alt="Plataforma educacional">
                                         <div class="card-body">
                                             <h5 class="card-title">Crie chatbot do whatsapp delivery com painel </h5>
@@ -483,13 +483,13 @@
                                 </div>
                                 <div class="col">
                                     <div class="card h-100">
-                                        <img src="../static/img/pagina-links.png" class="card-img-top img-fluid w-100"
+                                        <img src="img/portifolio_corporativo.png" class="card-img-top img-fluid w-100"
                                             alt="print do blog">
                                         <div class="card-body">
                                             <h5 class="card-title">Página de Links</h5>
                                             <p class="card-text">Projeto front-end criado com HTML, CSS, Bootstrap e
-                                                JavaScript,
-                                                deploy realizado no Netlify</p>
+                                                JavaScript, Backend Flask ,
+                                                deploy realizado no GitHub e PythonAnyWhere</p>
                                             <div class="d-flex justify-content-center">
                                                 
                                             </div>
