--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                                         <img src="img/portifolio_corporativo.png" class="card-img-top img-fluid w-100"
                                             alt="print do blog">
                                         <div class="card-body">
-                                            <h5 class="card-title">Página de Links</h5>
+                                            <h5 class="card-title">Portfólio de Projetos Corporativos</h5>
                                             <p class="card-text">Projeto front-end criado com HTML, CSS, Bootstrap e
                                                 JavaScript, Backend Flask ,
                                                 deploy realizado no GitHub e PythonAnyWhere</p>
