--- a/index.html
+++ b/index.html
@@ -491,7 +491,10 @@
                                                 JavaScript, Backend Flask ,
                                                 deploy realizado no GitHub e PythonAnyWhere</p>
                                             <div class="d-flex justify-content-center">
-                                                
+                                                <a href="https://github.com/InfoSistemasPy/th_portifolio_2024" target='_blank'
+                                                    class="btn btn-outline-dark me-3"><i class="bi bi-github"></i></a>
+                                                <a href="https://infosistemaspy.github.io/th_portifolio_2024/" target='_blank'
+                                                    class="btn btn-outline-primary"><i class="bi bi-link-45deg"></i></a>
                                             </div>
 
                                         </div>
