--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                   <div class="text-uppercase">Programador FullStack &middot; jr.</div>
                                 </div>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-center mb-3">
-                                  <a target="_blank" class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="templates/th_portifolio_2024/index.html">Portifólio</a>
+                                  <a target="_blank" class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="templates/th_portifolio_2024/index.html">Portifólio  + Contato</a>
                                   
                                 </div>
                               </div>
